fix layout bug

--- a/css/design-left-view.css
+++ b/css/design-left-view.css
@@ -148,7 +148,7 @@
   content: url(https://cdn.jsdelivr.net/gh/WiniGit/goline@859a1cc/lib/assets/base_component_black.svg);
 }
 
-:matches(.layer_wbase_tile[cateid="140"],.layer_wbase_tile[cateid="128"]) > img {
+:is(.layer_wbase_tile[cateid="140"],.layer_wbase_tile[cateid="128"]) > img {
   content: url(https://cdn.jsdelivr.net/gh/WiniGit/goline@859a1cc/lib/assets/frame_black.svg) !important;
 }
 .layer_wbase_tile[cateid="138"] > img {
